Adding `chain-of-trust` to the swift build

--- a/taskcluster/ci/swift/kind.yml
+++ b/taskcluster/ci/swift/kind.yml
@@ -31,6 +31,7 @@ tasks:
       - project:releng:services/tooltool/api/download/internal
     worker-type: b-osx
     worker:
+      chain-of-trust: true
       max-run-time: 1800
     release-artifacts:
       - swift-components.tar.xz
