--- a/components/support/nimbus-cli/Cargo.toml
+++ b/components/support/nimbus-cli/Cargo.toml
@@ -31,7 +31,7 @@ percent-encoding = "2.3.0"
 copypasta = "0.8.2"
 chrono = "0.4.26"
 axum = { version = "0.6.18", optional = true }
-tokio = { version = "1.29.1", optional = true, features = ["sync", "rt", "macros"] }
+tokio = { version = "1.29.1", optional = true, features = ["sync", "rt", "macros", "rt-multi-thread"] }
 tower = { version = "0.4.13", optional = true }
 tower-http = { version = "0.4.1", optional = true, features = ["fs", "set-header"] }
 tower-livereload = { version = "0.8.0", optional = true }
