--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,7 +122,7 @@ default-members = [
 [workspace.dependencies]
 rusqlite = "0.30.0"
 libsqlite3-sys = "0.27.0"
-uniffi = "0.25.2"
+uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main" }
 
 [profile.release]
 opt-level = "s"
