Adding command to print out ingestion sizes
Knowing these sizes can help us optimize things.  I'm going to use the
row counts as guidance to improve our ingestion benchmarks.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,3 +5,4 @@ dev-install = ["install", "asdev"]
 verify_env = ["asdev", "verify_env"]
 fxa = ["run", "-p", "examples-fxa-client", "--"]
 suggest-bench = ["bench", "-p", "suggest", "--features", "benchmark_api"]
+suggest-debug-ingestion-sizes = ["run", "-p", "suggest", "--bin", "debug_ingestion_sizes", "--features", "benchmark_api"]
