Remote settings persistence support
Added the `RemoteSettingsService` and `RemoteSettingsClient` types.
These represent the shape of the new API that we're hoping to implement.
The goal is to match the API of the official client more closely. In
particular, the new types have different semantics for getting/syncing
records that allow clients to avoid hitting the network when getting
settings values during startup.

--- a/components/remote_settings/Cargo.toml
+++ b/components/remote_settings/Cargo.toml
@@ -11,6 +11,7 @@ exclude = ["/android", "/ios"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+camino = "1.1"
 log = "0.4"
 uniffi = { workspace = true }
 thiserror = "1.0"
